changed background pic to png

--- a/_posts/2017-01-11-pharmacy.md
+++ b/_posts/2017-01-11-pharmacy.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title:  "A Dose Titration Story by Your Friendly Neighbourhood Pharmacist"
+title:  "A Dose Titration Story by Your Friendly Neighborhood Pharmacist"
 date:   2017-01-11
-excerpt: "Minimal, one column Jekyll theme for your blog."
-project: true
+excerpt: "What pharmacists do when they encounter dose changes"
+project: false
 tag:
-- jekyll
-- moon
-- blog
-- about
-- theme
+- pharmacy
+- drug
+- healthcare
+- therapeutic
+- patient
 comments: true
 ---
 
