trying to link posts to blog

--- a/_posts/2017-01-11-pharmacy.md
+++ b/_posts/2017-01-11-pharmacy.md
@@ -8,7 +8,7 @@ tag:
 - healthcare
 - therapeutic
 - patient
-comments: true
+comments: false
 ---
 
 ![alt text](https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Woman_consults_with_pharmacist.jpg/1280px-Woman_consults_with_pharmacist.jpg "friendly pharmacist")
