--- a/_posts/2017-09-11-kNN.md
+++ b/_posts/2017-09-11-kNN.md
@@ -914,7 +914,7 @@ plt.show()
 ```
 
 
-![png](kNN_exercise_files/kNN_exercise_33_0.png)
+![png](CopyOfkNN_exercise_33_0.png)
 
 
 
@@ -927,9 +927,9 @@ plt.show()
 ```
 
 
-![png](kNN_exercise_files/kNN_exercise_34_0.png)
+![png](CopyOfkNN_exercise_34_0.png)
 
 
 In my kNN attempt, split ratios at 0.1 and 0.2 give a very large variabilty in accuracy. Too few training data points will impact the accuracy. k values do not give a large variability but I wonder why 
 
-s*scratching my head*
+*scratching my head*
