fixing knn exercise image links

--- a/_posts/2017-09-11-kNN.md
+++ b/_posts/2017-09-11-kNN.md
@@ -914,7 +914,7 @@ plt.show()
 ```
 
 
-<img src=https://github.com/peter0083/peter0083.github.io/blob/master/_posts/CopyOfkNN_exercise_33_0.png>
+<img src="../assets/img/kNN_exercise/CopyOfkNN_exercise_33_0.png" alt="kNN exercise 33">
 
 
 
@@ -927,7 +927,7 @@ plt.show()
 ```
 
 
-<img src=https://github.com/peter0083/peter0083.github.io/blob/master/_posts/CopyOfkNN_exercise_34_0.png>
+<img src="../assets/img/kNN_exercise/CopyOfkNN_exercise_34_0.png" alt="kNN exercise 34">>
 
 
 In my kNN attempt, split ratios at 0.1 and 0.2 give a very large variabilty in accuracy. Too few training data points will impact the accuracy. k values do not give a large variability but I wonder why 
